# PVEVDIClient

./: .gitignore  CMakeLists.txt  PVEClient.pro  pveclient-install.sh
.github/workflows/: build.yml
resources/: resources.qrc
resources/styles/: dark_theme.qss
src/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  ConnectionInfo.cpp  ConnectionInfo.h  ConnectionManager.cpp  ConnectionManager.h  DebugLogger.cpp  DebugLogger.h  ProcessRunner.cpp  ProcessRunner.h
src/protocol/: AbstractLauncher.h  RdpLauncher.cpp  RdpLauncher.h  SpiceLauncher.cpp  SpiceLauncher.h
src/pve/: PveApiClient.cpp  PveApiClient.h  PveAuthManager.cpp  PveAuthManager.h
src/ui/: ConnectionEditDialog.cpp  ConnectionEditDialog.h  ConnectionListWidget.cpp  ConnectionListWidget.h  FlowLayout.cpp  FlowLayout.h  LoginDialog.cpp  LoginDialog.h  LoginView.cpp  LoginView.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  VmCard.cpp  VmCard.h  WorkspaceView.cpp  WorkspaceView.h
